# SIDE

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  index.css  index.html  main.cpp  manifest.json  service-worker.js
imgui/: CMakeLists.txt  TextEditor.cpp  TextEditor.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp
src/: CMakeLists.txt  editor.cpp  editor.h  explorer.cpp  explorer.h  init.cpp  lang_defs.cpp  lang_defs.h  main.cpp  platform.h  render_host.cpp  render_host.h  renderable.h
src/csfs/: CMakeLists.txt  CSFS.cpp  CSFS.h
src/storage/: CMakeLists.txt  sentry.fbs  sentryfile.h
